whatsapp and computatins with ecknowledgement

--- a/computation_template.html
+++ b/computation_template.html
@@ -101,8 +101,8 @@
         <td class = "bold_text" style="width: 135px; height: 13px;">Selected tax:</td>
 
         <td style="width: 289.5px; height: 13px;">&nbsp;{{regime}}</td>
-        <td style="width: 288.5px; height: 13px;">&nbsp;</td>
-        <td style="width: 283px; height: 13px;">&nbsp;</td>
+        <td class = "bold_text" style="width: 288.5px; height: 13px;">Acknowledgement:</td>
+        <td style="width: 283px; height: 13px;">{{acknowledgement}}</td>
         </tr>
         </tbody>
         </table>
