--- a/computation_template.html
+++ b/computation_template.html
@@ -88,13 +88,13 @@
         <tr style="height: 13.9333px;">
         <td class = "bold_text" style="width: 135px; height: 13.9333px;">Bank A/C no.:</td>
         <td style="width: 289.5px; height: 13.9333px;">&nbsp;{{ac}}</td>
-        <td class = "bold_text" style="width: 288.5px; height: 13.9333px;">IFSC code</td>
+        <td class = "bold_text" style="width: 288.5px; height: 13.9333px;">IFSC code:</td>
         <td style="width: 283px; height: 13.9333px;">&nbsp;{{ifsc}}</td>
         </tr>
         <tr style="height: 13px;">
         <td class = "bold_text" style="width: 135px; height: 13px;">E-Filing Status:</td>
         <td style="width: 289.5px; height: 13px;">&nbsp;{{filing_status}}</td>
-        <td class = "bold_text" style="width: 288.5px; height: 13px;">Aadhaar Card Number</td>
+        <td class = "bold_text" style="width: 288.5px; height: 13px;">Aadhaar Card Number:</td>
         <td style="width: 283px; height: 13px;">&nbsp;{{aadhar}}</td>
         </tr>
         <tr style="height: 13px;">
